--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,15 +4,6 @@ body {
     line-height: 1;
   }
   
-  textarea{
-    background: transparent;
-    border: none;
-    resize: none;
-    color: #000000;
-    border-left: 1px solid black;
-    padding: 10px;
-  }
-  
   .jumbotron {
     text-align: center;
     background-color: transparent;
@@ -23,6 +14,15 @@ body {
   
   .description{
     white-space: pre-wrap;
+  }
+  
+  .textarea{
+    background: transparent;
+    border: none;
+    resize: none;
+    color: #000000;
+    border-left: 1px solid black;
+    padding: 10px;
   }
   
   .time-block{
