--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
     white-space: pre-wrap;
   }
   
-  .textarea{
+  textarea{
     background: transparent;
     border: none;
     resize: none;
